--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,6 +55,7 @@ jobs:
             'SAM_SolarCalculator'
             'SAM_Tas'
             'SAM_Excel'
+            'SAM_GEM'
             'SAM_LadybugTools'
             'SAM_UI'
             $repo
@@ -103,6 +104,7 @@ jobs:
             'SAM_SolarCalculator'
             'SAM_Tas'
             'SAM_Excel'
+            'SAM_GEM'
             'SAM_LadybugTools'
             'SAM_UI'
             $repo
