--- a/WPF/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
+++ b/WPF/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
@@ -9,21 +9,18 @@
 	  <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 	  <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
 	  <Configurations>Debug;Release;net48-windows</Configurations>
+    <OutputPath>..\..\build\</OutputPath>
   </PropertyGroup>
   <PropertyGroup>
     <Nullable>enable</Nullable>
-    <LangVersion>9.0</LangVersion>
+    <LangVersion>12.0</LangVersion>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <OutputPath>..\..\build\</OutputPath>
-    <DocumentationFile>..\..\build\SAM.Analytical.UI.WPF.xml</DocumentationFile>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <OutputPath>..\..\build\</OutputPath>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='net48-windows|AnyCPU'">
-    <OutputPath>..\..\build\</OutputPath>
-  </PropertyGroup>
+  <ItemGroup>
+    <Compile Remove="Controls\Filter\**" />
+    <EmbeddedResource Remove="Controls\Filter\**" />
+    <None Remove="Controls\Filter\**" />
+    <Page Remove="Controls\Filter\**" />
+  </ItemGroup>
   <ItemGroup>
     <Reference Include="gbXMLSerializer">
       <HintPath>..\..\references\gbXMLSerializer.dll</HintPath>
@@ -145,8 +142,5 @@
     <ProjectReference Include="..\..\SAM_UI\SAM.Geometry.UI\SAM.Geometry.UI.csproj" />
     <ProjectReference Include="..\SAM.Core.UI.WPF\SAM.Core.UI.WPF.csproj" />
     <ProjectReference Include="..\SAM.Geometry.UI.WPF\SAM.Geometry.UI.WPF.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Controls\Filter\" />
   </ItemGroup>
 </Project>
